--- a/src/main/resources/lang/wasteland/en_US.lang
+++ b/src/main/resources/lang/wasteland/en_US.lang
@@ -1,4 +1,10 @@
 wasteland.world.default.name=Wasteland (CLASSIC)
-wasteland.world.default.desc=No grass, no water, and no replantable trees.
+wasteland.world.default.desc=No grass, no surface water, and no replantable trees.
 wasteland.world.extended.name=Wasteland (EXTENDED)
-wasteland.world.extended.desc=No grass, no water, and no replantable trees.
+wasteland.world.extended.desc=No grass, no surface water, and no replantable trees.
+
+wasteland.biome.wastes=Wasteland
+wasteland.biome.forest=Dead Forest
+wasteland.biome.taiga=Cold Forest
+wasteland.biome.desert=Desert
+
